# rules_distro

./: MODULE.bazel  README.md
apt/: rules.bzl
pkg/: rules.bzl
tools/bazel/: BUILD.bazel  deleted.bazelrc  refresh.sh
tools/file/: file.MODULE.bazel  files.bazelrc
